se agregar archivos CSS y JS

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<!--Fiorella-->
-
-<!-- Gustavo -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Juego del Memotec</title>
+    <link rel="stylesheet" href="memotec.css" />
+  </head>
+  <body>
+    <script src="memotec.js"></script>
+  </body>
+</html>
