Se agregaron las primeras lineas de codigo

--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juego del Memotec</title>
+    <title>Memotec</title>
     <link rel="stylesheet" href="memotec.css" />
   </head>
   <body>
+    <div class="containerHead">
+      <h1>Probaremos cuan rapido eres con tu memoria</h1>
+      <header>
+        <h2>elige tu emoji y recuerda donde estaba</h2>
+        
+      </header>
+      <div class="containerCenter">
+        <button id="addGamers">Agregar Cantidad de Jugadores</button> 
+        <br>
+        <br>
+        <br>
+        <div id="contenedor-campos"></div>
+        <br>
+        <br>
+        <br>
+        <button id="crearObjeto">Comenzar</button>
+      </div>
+      
+  
+<footer>
+    <h3>Proyecto Hackaboos - Fuerza Latina</h3>
+</footer>
     <script src="memotec.js"></script>
   </body>
 </html>
