mas Diseño y fonto de pantalla, funcionalidad al boton comenza

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memotec</title>
-    <link rel="stylesheet" href="memotec.css" />
+    <link rel="stylesheet" href="./css/memotec.css" />
   </head>
   <body>
     <h1 id="brillo">Probaremos cuan rapido eres con tu memoria</h1>
@@ -25,6 +25,6 @@
 <footer>
     <h3>Proyecto Hackaboos - Fuerza Latina</h3>
 </footer>
-    <script src="memotec.js"></script>
+    <script src="./js/memotec.js"></script>
   </body>
 </html>
