Se quita el prompt y se agrega un imput

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         
       </header>
       <div class="containerCenter">
-        <button id="addGamers">Agregar Cantidad de Jugadores</button> 
+        <button id="addGamers">Agregar Numero de Jugadores</button> 
+        <br>
+        <label for="nombre"></label>
+        <input type="text" id="nombre">
         <br>
         <div id="contenedor-campos"></div>
         <br>
