--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p> ¿Cuántas personas jugarán? </p>
         <br>
         <label for="nombre"></label>
-        <input type="text" id="nombre">
+        <input type="number" id="nombre">
         <br>
         <div id="contenedor-campos"></div>
         <button id="addGamers"> Agregar Jugadores </button>
@@ -37,8 +37,7 @@
       
 </body>    
 <footer>
-    <h3>Proyecto Hackaboos - Fuerza Latina</h3>
+  <h3>Proyecto Hackaboos - Fuerza Latina</h3>
 </footer>
     <script src="./js/memotec.js"></script>
-  
 </html>
