se corrigen funciones de JS para obtener el arreglo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           aria-role="presentation"
           aria-label="FACE THROWING A KISS"
         ></i>
-        <button id="crearObjeto">Comenzar</button>
+        <button id="crearArreglo">Comenzar</button>
         <i
           class="em em-partying_face"
           aria-role="presentation"
