corrección de solapamiento

--- a/playGame.html
+++ b/playGame.html
@@ -3,14 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>HOLA MUNDO</h1>
-=======
     <link rel="stylesheet" href="./css/stylesGame.css" />
-    <title>Pruebas del Memotec</title>
+    <title>Memotec</title>
   </head>
   <body>
     <header>
@@ -133,6 +127,5 @@
     </section>
 
     <script src="./js/playGame.js" type="module"></script>
->>>>>>> Gustavo
   </body>
 </html>
