--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
         <h2 id="destello">Elige tu emoji y recuerda donde estaba...!!</h2>
       </header>
       <div class="containerCenter">
-        <p>¿Cuántas personas jugarán?</p>
-        <br />
-        <label for="nombre"></label>
-        <input type="number" id="nombre" />
-        <br />
+        <p>Haz Click Aqui para Comenzar</p>
         <div id="contenedor-campos"></div>
-        <button id="addGamers">Agregar Jugadores</button>
+        <a href="/playGame.html">
+          <button id="addGamers">COMENZAR</button>
+        </a>
       </div>
       <div class="emojis">
         <i
@@ -38,7 +36,6 @@
           aria-role="presentation"
           aria-label="FACE THROWING A KISS"
         ></i>
-        <button id="crearArreglo">Comenzar</button>
         <i
           class="em em-partying_face"
           aria-role="presentation"
