Arreglos CSS en final.html

--- a/FINAL.HTML
+++ b/FINAL.HTML
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/final.css">
+    <link rel="stylesheet" href="/css/final.css" />
+    <link rel="stylesheet" href="https://afeld.github.io/emoji-css/emoji.css" />
     <title>RESULTADO FINAL</title>
   </head>
   <body>
-    <h1>Felicidades, has terminado</h1>
+    <h1>Felicidades, has terminado...!!!</h1>
     <div>
       <p id="timer"></p>
     </div>
@@ -36,5 +37,40 @@
       localStorage.removeItem("timer");
       localStorage.removeItem("moves");
     </script>
+    <div class="emojis">
+      <i
+        class="em em-astonished"
+        aria-role="presentation"
+        aria-label="ASTONISHED FACE"
+      ></i>
+      <i
+        class="em em-hugging_face"
+        aria-role="presentation"
+        aria-label="HUGGING FACE"
+      ></i>
+      <i
+        class="em em-kissing_heart"
+        aria-role="presentation"
+        aria-label="FACE THROWING A KISS"
+      ></i>
+      <i
+        class="em em-partying_face"
+        aria-role="presentation"
+        aria-label="FACE WITH PARTY HORN AND PARTY HAT"
+      ></i>
+      <i
+        class="em em-pleading_face"
+        aria-role="presentation"
+        aria-label="FACE WITH PLEADING EYES"
+      ></i>
+      <i
+        class="em em-raised_hand_with_fingers_splayed"
+        aria-role="presentation"
+        aria-label=""
+      ></i>
+    </div>
   </body>
+  <footer>
+    <h3>Proyecto Hackaboos - Fuerza Latina</h3>
+  </footer>
 </html>
