--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>Memotec</title>
     <link rel="stylesheet" href="./css/memotec.css" />
     <link rel="stylesheet" href="https://afeld.github.io/emoji-css/emoji.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <h1 id="brillo">Probaremos cuan rapido eres con tu memoria</h1>
