--- a/FINAL.HTML
+++ b/FINAL.HTML
@@ -8,7 +8,8 @@
     <title>RESULTADO FINAL</title>
   </head>
   <body>
-    <h1>Felicidades, has terminado...!!!</h1>
+    <h1>Felicidades, <br> ¡has terminado!</h1>
+    <div class="numeros">
     <div>
       <p id="timer"></p>
     </div>
@@ -16,6 +17,8 @@
       <p id="moves"></p>
     </div>
     <button class="volver" onclick="volver()">VOLVER AL JUEGO</button>
+  </div>
+    
 
     <script type="module">
       async function volver() {
@@ -71,6 +74,6 @@
     </div>
   </body>
   <footer>
-    <h3>Proyecto Hackaboos - Fuerza Latina</h3>
+    <h3>Proyecto HackABoss - Fuerza Latina</h3>
   </footer>
 </html>
