Media queries y cambios finales

--- a/playGame.html
+++ b/playGame.html
@@ -35,15 +35,14 @@
     <section class="game-container">
       <div class="pointer">
         <ul>
-          <li>Tiempo:</li>
+          <li class="tiempo">Tiempo:</li>
           <br />
           <li class="timer">0 Min 0 Seg</li>
           <br />
-          <li>-----------</li>
+          <li></li>
           <li class="hide">##########</li>
           <br />
-          <li>-----------</li>
-          <br />
+          <li></li>
           <li class="moves-selector">Intentos:</li>
         </ul>
       </div>
